--- a/module/support/VirtualCamera/data/config/VirtualCamera.yaml
+++ b/module/support/VirtualCamera/data/config/VirtualCamera.yaml
@@ -23,11 +23,11 @@ image:
 # lens_type: pinhole
 
 # lens:
-#   radiansPerPixel: 0.01
-#   centreOffset: [0,0]
+#   radians_per_pixel: 0.01
+#   centre_offset: [0,0]
 
-# imageWidth: 320
-# imageHeight: 240
+# image_width: 320
+# image_height: 240
 # FOV_X: 1.0472
 # FOV_Y: 0.785398
 # DISTORTION_FACTOR: -0.0000
