--- a/module/platform/darwin/HardwareSimulator/data/config/DarwinHardwareSimulator.yaml
+++ b/module/platform/darwin/HardwareSimulator/data/config/DarwinHardwareSimulator.yaml
@@ -12,4 +12,4 @@ noise:
     y: 0.01
     z: 0.01
 
-bodyTilt: 0 #25 * pi / 180
+bodyTilt: 0 #25 * pi / 180 # Set this to be the same as QuinticWalk.yaml:walk:trunk:pitch
