--- a/module/platform/webots/Webots/data/config/webots.yaml
+++ b/module/platform/webots/Webots/data/config/webots.yaml
@@ -8,6 +8,7 @@ port: "10020"
 # The mapping defined in the game.json inside the referee on the Webots
 # The mapping is team_id and the index is player_id
 # TODO(cameron) Work out how this will work in Robocup and put inside on<Configuration>
+# Is it stored in the environment variable `ROBOCUP_SIMULATOR_ADDR`?
 player_port:
     "red" :
         - "10001"
