--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -47,7 +47,38 @@ steps:
           push:
             - nuc8i7beh:nubots/nubots:nuc8i7beh
 
-  # Build NUsight2 and test it, which doesn't need to wait for the images to be uploaded
+  # Wait to finish uploading the image before doing the next steps
+  - wait
+
+  # Build generic target and test
+  - label: "Build generic and Test"
+    command: "./b configure -- -DBUILD_TESTS=ON && ./b build && ./b tests run"
+    plugins:
+      - docker-compose#v3.0.3:
+          config: .buildkite/NUbots/docker-compose.yml
+          pull: generic_image
+          run: generic
+          workdir: /home/nubots/NUbots/
+
+  # Build for both nuc targets
+  - label: "Build nuc7i7bnh"
+    command: echo "nuc7i7bnh image successfully built!"
+    plugins:
+      - docker-compose#v3.0.3:
+          config: .buildkite/NUbots/docker-compose.yml
+          pull: nuc7i7bnh_image
+          run: nuc7i7bnh
+          workdir: /home/nubots/NUbots/
+  - label: "Build nuc8i7beh"
+    command: echo "nuc8i7beh image successfully built!"
+    plugins:
+      - docker-compose#v3.0.3:
+          config: .buildkite/NUbots/docker-compose.yml
+          pull: nuc8i7beh_image
+          run: nuc8i7beh
+          workdir: /home/nubots/NUbots/
+
+  # Build NUsight2
   - label: "Build NUsight2"
     command:
       - cd ./nusight2
@@ -90,37 +121,6 @@ steps:
           propagate-uid-gid: true
           environment:
             - "HOME=/workdir"
-
-  # Wait to finish uploading the image before doing the next steps
-  - wait
-
-  # Build generic target and test
-  - label: "Build generic and Test"
-    command: "./b configure -- -DBUILD_TESTS=ON && ./b build && ./b tests run"
-    plugins:
-      - docker-compose#v3.0.3:
-          config: .buildkite/NUbots/docker-compose.yml
-          pull: generic_image
-          run: generic
-          workdir: /home/nubots/NUbots/
-
-  # Build for both nuc targets
-  - label: "Build nuc7i7bnh"
-    command: echo "nuc7i7bnh image successfully built!"
-    plugins:
-      - docker-compose#v3.0.3:
-          config: .buildkite/NUbots/docker-compose.yml
-          pull: nuc7i7bnh_image
-          run: nuc7i7bnh
-          workdir: /home/nubots/NUbots/
-  - label: "Build nuc8i7beh"
-    command: echo "nuc8i7beh image successfully built!"
-    plugins:
-      - docker-compose#v3.0.3:
-          config: .buildkite/NUbots/docker-compose.yml
-          pull: nuc8i7beh_image
-          run: nuc8i7beh
-          workdir: /home/nubots/NUbots/
 
   # Formatting
   - label: "Validate C++ and Protobuf formatting"
