Adds Josephus' suggestion for LTS nodejs
Co-authored-by: Josephus Paye II <j.paye96@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,7 +35,7 @@ RUN install-package \
     ninja \
     cmake \
     meson \
-    nodejs \
+    nodejs-lts-fermium \
     npm \
     yarn \
     git
