Fixes build issues

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -240,7 +240,7 @@ RUN install-from-source https://github.com/Fastcode/NUClear/archive/153ccdb9a13d
     -DBUILD_TESTS=OFF
 
 # Visual Mesh
-RUN install-from-source https://github.com/Fastcode/VisualMesh/archive/v2.0.1.tar.gz \
+RUN install-from-source https://github.com/Fastcode/VisualMesh/archive/refs/heads/master.tar.gz \
     -DBUILD_TENSORFLOW_OP=OFF \
     -DBUILD_EXAMPLES=OFF
 
