--- a/module/platform/Webots/data/config/webots.yaml
+++ b/module/platform/Webots/data/config/webots.yaml
@@ -1,6 +1,8 @@
 # Controls the minimum log level that NUClear log will display
 log_level: DEBUG
 
+clock_smoothing: 0.6
+
 # Connection details
 server_address: "127.0.0.1"
 port: "10020"
