--- a/module/platform/Webots/data/config/webots.yaml
+++ b/module/platform/Webots/data/config/webots.yaml
@@ -1,6 +1,15 @@
 # Controls the minimum log level that NUClear log will display
 log_level: DEBUG
 
+# Requested time step between sensors
+time_step: 8
+# Minimum time step allowed between camera sensors
+min_camera_time_step: 16
+# Minimum time step allowed between other sensors
+min_sensor_time_step: 8
+
+clock_smoothing: 0.6
+
 # Connection details
 server_address: "127.0.0.1"
 port: "10020"
@@ -10,7 +19,7 @@ port: "10020"
 # TODO(cameron) Work out how this will work in Robocup and put inside on<Configuration>
 # Is it stored in the environment variable `ROBOCUP_SIMULATOR_ADDR`?
 player_port:
-    "red" :
+    "red":
         - "10001"
         - "10002"
         - "10003"
@@ -20,5 +29,3 @@ player_port:
         - "10022"
         - "10023"
         - "10024"
-
-time_step: 32
