Use modern cmake

--- a/module/vision/VisualMesh/CMakeLists.txt
+++ b/module/vision/VisualMesh/CMakeLists.txt
@@ -1,4 +1,4 @@
 find_package(VisualMesh REQUIRED)
 
 # Build our NUClear module
-nuclear_module(INCLUDES ${VisualMesh_INCLUDE_DIRS} LIBRARIES ${VisualMesh_LIBRARIES})
+nuclear_module(LIBRARIES visualmesh::visualmesh)
