Configure logging to /robocup-logs only if it exists

--- a/module/support/logging/DataLogging/data/config/robocup2021/DataLogging.yaml
+++ b/module/support/logging/DataLogging/data/config/robocup2021/DataLogging.yaml
@@ -1,5 +1,5 @@
 output:
-  directory: /robocup-logs
+  directory: log
   split_size: 5 * GiB
 
 # You can put any messages that is emitted in the system here and it will be logged
