Slightly more powerful kicks?
I think we need to fix up velocity

--- a/module/motion/ScriptEngine/data/scripts/docker/KickRight.yaml
+++ b/module/motion/ScriptEngine/data/scripts/docker/KickRight.yaml
@@ -365,7 +365,7 @@
       gain: 30
       torque: 100
     - id: R_KNEE
-      position: 1.006441
+      position: 1.20000005
       gain: 30
       torque: 100
     - id: R_HIP_ROLL
