--- a/module/motion/ScriptEngine/data/scripts/webots/StandUpBack.yaml
+++ b/module/motion/ScriptEngine/data/scripts/webots/StandUpBack.yaml
@@ -900,6 +900,252 @@
       position: -0.0966643915
       gain: 30
       torque: 100
+- duration: 300
+  targets:
+    - id: L_ELBOW
+      position: -1.35000002
+      gain: 20
+      torque: 100
+    - id: R_HIP_PITCH
+      position: -2.26999998
+      gain: 20
+      torque: 100
+    - id: L_HIP_PITCH
+      position: -2.26999998
+      gain: 20
+      torque: 100
+    - id: R_KNEE
+      position: 2.42000008
+      gain: 20
+      torque: 100
+    - id: R_HIP_ROLL
+      position: -0.0199999996
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 1.93079603
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_PITCH
+      position: -0.800000012
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -0.800000012
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: R_ELBOW
+      position: -1.35000002
+      gain: 20
+      torque: 100
+    - id: R_HIP_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: HEAD_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_KNEE
+      position: 2.42000008
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 1.93079603
+      gain: 20
+      torque: 100
+    - id: L_HIP_ROLL
+      position: 0.0199999996
+      gain: 20
+      torque: 100
+    - id: L_HIP_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: HEAD_PITCH
+      position: -0.0966643915
+      gain: 30
+      torque: 100
+- duration: 300
+  targets:
+    - id: L_ELBOW
+      position: -1.35000002
+      gain: 20
+      torque: 100
+    - id: R_HIP_PITCH
+      position: -2.26999998
+      gain: 20
+      torque: 100
+    - id: L_HIP_PITCH
+      position: -2.26999998
+      gain: 20
+      torque: 100
+    - id: R_KNEE
+      position: 2.42000008
+      gain: 20
+      torque: 100
+    - id: R_HIP_ROLL
+      position: -0.0199999996
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 1.93079603
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_PITCH
+      position: -0.800000012
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -0.800000012
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: R_ELBOW
+      position: -1.35000002
+      gain: 20
+      torque: 100
+    - id: R_HIP_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: HEAD_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_KNEE
+      position: 2.42000008
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 1.93079603
+      gain: 20
+      torque: 100
+    - id: L_HIP_ROLL
+      position: 0.0199999996
+      gain: 20
+      torque: 100
+    - id: L_HIP_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: HEAD_PITCH
+      position: -0.0966643915
+      gain: 30
+      torque: 100
+- duration: 300
+  targets:
+    - id: L_ELBOW
+      position: -1.35000002
+      gain: 20
+      torque: 100
+    - id: R_HIP_PITCH
+      position: -2.26999998
+      gain: 20
+      torque: 100
+    - id: L_HIP_PITCH
+      position: -2.26999998
+      gain: 20
+      torque: 100
+    - id: R_KNEE
+      position: 2.42000008
+      gain: 20
+      torque: 100
+    - id: R_HIP_ROLL
+      position: -0.0199999996
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 1.93079603
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_PITCH
+      position: -0.800000012
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -0.800000012
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: R_ELBOW
+      position: -1.35000002
+      gain: 20
+      torque: 100
+    - id: R_HIP_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: HEAD_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_KNEE
+      position: 2.42000008
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 1.93079603
+      gain: 20
+      torque: 100
+    - id: L_HIP_ROLL
+      position: 0.0199999996
+      gain: 20
+      torque: 100
+    - id: L_HIP_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: HEAD_PITCH
+      position: -0.0966643915
+      gain: 30
+      torque: 100
 - duration: 1000
   targets:
     - id: L_ELBOW
