--- a/module/motion/ScriptEngine/data/scripts/webots/StandUpFront.yaml
+++ b/module/motion/ScriptEngine/data/scripts/webots/StandUpFront.yaml
@@ -654,7 +654,171 @@
       position: -2
       gain: 30
       torque: 100
-- duration: 1000
+- duration: 300
+  targets:
+    - id: R_HIP_PITCH
+      position: -2
+      gain: 20
+      torque: 100
+    - id: L_HIP_PITCH
+      position: -2
+      gain: 20
+      torque: 100
+    - id: R_KNEE
+      position: 2.5999999
+      gain: 20
+      torque: 100
+    - id: R_HIP_ROLL
+      position: -0.0199999996
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 0.890796304
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_PITCH
+      position: -1.53999996
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -1.53999996
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: R_HIP_YAW
+      position: -0.200000003
+      gain: 20
+      torque: 100
+    - id: HEAD_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_KNEE
+      position: 2.5999999
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 0.890796304
+      gain: 20
+      torque: 100
+    - id: HEAD_PITCH
+      position: -0.207300901
+      gain: 20
+      torque: 100
+    - id: L_HIP_ROLL
+      position: 0.0199999996
+      gain: 20
+      torque: 100
+    - id: L_HIP_YAW
+      position: 0.200000003
+      gain: 20
+      torque: 100
+    - id: R_ELBOW
+      position: 0
+      gain: 30
+      torque: 100
+    - id: L_ELBOW
+      position: 0.300000012
+      gain: 30
+      torque: 100
+- duration: 300
+  targets:
+    - id: R_HIP_PITCH
+      position: -2
+      gain: 20
+      torque: 100
+    - id: L_HIP_PITCH
+      position: -2
+      gain: 20
+      torque: 100
+    - id: R_KNEE
+      position: 2.5999999
+      gain: 20
+      torque: 100
+    - id: R_HIP_ROLL
+      position: -0.0199999996
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 0.890796304
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_PITCH
+      position: -1.53999996
+      gain: 20
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -1.53999996
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.300000012
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_ROLL
+      position: 0
+      gain: 20
+      torque: 100
+    - id: R_HIP_YAW
+      position: -0.200000003
+      gain: 20
+      torque: 100
+    - id: HEAD_YAW
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_KNEE
+      position: 2.5999999
+      gain: 20
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 0.890796304
+      gain: 20
+      torque: 100
+    - id: HEAD_PITCH
+      position: -0.207300901
+      gain: 20
+      torque: 100
+    - id: L_HIP_ROLL
+      position: 0.0199999996
+      gain: 20
+      torque: 100
+    - id: L_HIP_YAW
+      position: 0.200000003
+      gain: 20
+      torque: 100
+    - id: R_ELBOW
+      position: 0
+      gain: 30
+      torque: 100
+    - id: L_ELBOW
+      position: 0.300000012
+      gain: 30
+      torque: 100
+- duration: 300
   targets:
     - id: R_HIP_PITCH
       position: -2
