--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -243,7 +243,7 @@ RUN install-from-source https://github.com/Fastcode/NUClear/archive/153ccdb9a13d
     -DBUILD_TESTS=OFF
 
 # Visual Mesh
-RUN install-from-source https://github.com/Fastcode/VisualMesh/archive/refs/heads/main.tar.gz \
+RUN install-from-source https://github.com/Fastcode/VisualMesh/archive/refs/tags/v2.1.0.tar.gz \
     -DBUILD_TENSORFLOW_OP=OFF \
     -DBUILD_EXAMPLES=OFF
 
