--- a/module/platform/Webots/data/config/webots.yaml
+++ b/module/platform/Webots/data/config/webots.yaml
@@ -1,6 +1,8 @@
 # Controls the minimum log level that NUClear log will display
 log_level: DEBUG
 
+# Maximum velocity from NUgus.proto motors
+max_velocity: 5.76
 # Requested time step between sensors
 time_step: 8
 # Minimum time step allowed between camera sensors
@@ -11,7 +13,5 @@ min_sensor_time_step: 8
 clock_smoothing: 0.6
 
 # Connection details
-server_address: "127.0.0.1"
-port: 10020
-
-time_step: 32
+server_address: "127.0.1.1"
+port: 10001
