Mount /robocup-logs directory with `./b webots run`

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ packer/build.pwi
 # Webots container building stuff
 docker/nugus_sim/binaries
 docker/nugus_sim/toolchain
+robocup-logs
 
 # Tests
 tests_output/
