Revert extra changes not in master

--- a/module/motion/QuinticWalk/data/webots/QuinticWalk.yaml
+++ b/module/motion/QuinticWalk/data/webots/QuinticWalk.yaml
@@ -1,20 +1,20 @@
 walk:
   # Full walk cycle frequency
   # (in Hz, > 0)
-  freq: 0.6
+  freq: 0.2
   # Length of double support phase in half cycle
   # (ratio, [0:1])
-  double_support_ratio: 0.4
+  double_support_ratio: 0.3
   # Give extra swing to first step for better start
   # (in ?, [0:10])
-  first_step_swing_factor: 1.0
+  first_step_swing_factor: 0.8 #1.0
   foot:
     # Lateral distance between the feet center
     # (in m, >= 0)
-    distance: 0.28
+    distance: 0.15 #0.28
     # Maximum flying foot height
     # (in m, >= 0)
-    rise: 0.1 #0.1
+    rise: 0.15 #0.1
     # Pause of Z movement on highest point
     # (single support cycle ratio, [0,1])
     z_pause: 0.08 #0.04
@@ -31,7 +31,7 @@ walk:
       roll_offset: 0.0
     # Phase of flying foot apex
     # (single support cycle phase, [0:1])
-    apex_phase: 0.13
+    apex_phase: 0.15
     overshoot:
       # Foot X/Y overshoot in ratio of step length
       # (ratio, >= 0)
@@ -45,29 +45,29 @@ walk:
     height: 0.45
     # Trunk pitch orientation
     # (in rad)
-    pitch: 20 * pi / 180 #28
+    pitch: 15 * pi / 180 #28
     # Phase offset of trunk oscillation
     # (half cycle phase, [-1:1])
     phase: 0.15
     # Trunk forward offset
     # (in m)
-    x_offset: 0.02 # 0.045
+    x_offset: 0.03 # 0.045
     # Trunk lateral offset
     # (in m)
-    y_offset: 0.0
+    y_offset: -0.01
     # Trunk lateral oscillation amplitude ratio
     # (ratio, >= 0)
     swing: 0.03 #0.05
     # Trunk swing pause length in phase at apex
     # (half cycle ratio, [0:1])
-    pause: 0.01 #0
+    pause: 0.1 #0
     x_offset_p_coef:
       # Trunk forward offset proportional to forward step
       # (in 1)
-      forward: 0.04 # 0.04
+      forward: 0.09 # 0.04
       # Trunk forward offset proportional to rotation step
       # (in m/rad)
-      turn: 0.04 #0.09
+      turn: 0.08 #0.09
     pitch_p_coef:
       # Trunk pitch orientation proportional to forward step
       # (in rad/m)
